[gd_scene load_steps=4 format=3 uid="uid://cjyuur1ra1ccx"]

[ext_resource type="Script" path="res://ui/action-bar/hud/hud.gd" id="1_a01pv"]
[ext_resource type="PackedScene" uid="uid://7ggnui5whqw3" path="res://ui/action-bar/action-bar/action_bartscn.tscn" id="1_j4pad"]
[ext_resource type="Texture2D" uid="uid://cc1slrppohqdx" path="res://icon.svg" id="2_buyqk"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a01pv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0

[node name="ActionBar" parent="VBoxContainer" instance=ExtResource("1_j4pad")]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="LevelProgress" type="ProgressBar" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 283.0
offset_bottom = 138.0

[node name="Photo" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Photo"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/Photo/MarginContainer"]
layout_mode = 2

[node name="Photo" type="TextureRect" parent="HBoxContainer/Photo/MarginContainer/PanelContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_buyqk")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Stats" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2

[node name="Name" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Stats/Name"]
layout_mode = 2
text = "Player Name:"

[node name="NameValue" type="Label" parent="HBoxContainer/VBoxContainer/Stats/Name"]
unique_name_in_owner = true
layout_mode = 2
text = "Test"

[node name="Level" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Stats/Level"]
layout_mode = 2
text = "Player Level:"

[node name="LevelValue" type="Label" parent="HBoxContainer/VBoxContainer/Stats/Level"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="Health" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Stats/Health"]
layout_mode = 2
text = "Player Health:"

[node name="HealthValue" type="Label" parent="HBoxContainer/VBoxContainer/Stats/Health"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
